# HSimSNN

./: .gitignore  HSimSNN.cabal  README.md  stack.yaml
examples/: basics.hs
scripts/: rasterplot.py
src/: .Main.hs.swp  Main.hs
src/Simulation/: HSimSNN.hs
src/Simulation/HSimSNN/: Connections.hs  Network.hs  Neuron.hs  Population.hs  Spikes.hs
src/bench/: bench.hs
