name:                HSimSNN
version:             0.2.0.0
synopsis:            Haskell based simulator for spiking neural networks
homepage:            https://github.com/sheiksadique/HSimSNN
license:             GPL-2
license-file:        LICENSE
author:              Sadique Sheik
maintainer:          sheiksadique@gmail.com
category:            Simulation
build-type:          Simple
extra-source-files:  README.md examples scripts
cabal-version:       >=1.10


library
  exposed-modules:     Simulation.HSimSNN
                       Simulation.HSimSNN.Network
                       Simulation.HSimSNN.Population
                       Simulation.HSimSNN.Connections
                       Simulation.HSimSNN.Neuron
                       Simulation.HSimSNN.Spikes
  build-depends:       base, 
                       vector,
                       mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
  

executable hsimsnn-example
  hs-source-dirs:   ./examples
  main-is:          basics.hs
  build-depends: base
              ,  HSimSNN 
              ,  mtl
              ,  random
              ,  process
              ,  vector
  default-language: Haskell2010